<resources>
    <string name="app_name">saturnV1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="string_profilemenu">Perfil</string>
    <string name="string_cartamenu">Carta</string>
    <string name="string_reviewmenu">Reseñas</string>
    <string name="string_configmenu">Ajustes</string>

    <string name="name_login">Login</string>
    <string name="name">Nombre</string>
    <string name="email_address">Correo electrónico</string>
    <string name="enter">Entrar</string>
    <string name="register">Registrarse</string>
    <string name="register_title">Registro</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="register_button">Registrarse</string>

    <string name="string_login">Login</string>
    <string name="string_signUp">SignUp</string>
    <string name="create_product">create_product</string>
    <string name="string_product_name">Nombre del producto</string>
    <string name="string_product_price">Precio del producto</string>
    <string name="string_product_type">Tipo de producto</string>
    <string name="string_product_description">Descripción del producto</string>
    <string name="createproduct_title">Añadir un producto</string>
    <string name="string_createproduct_button">Crear producto</string>
    <string name="string_add">Añadir</string>

</resources>